--- a/src/Component/Bookmark/Bookmark.css
+++ b/src/Component/Bookmark/Bookmark.css
@@ -1,18 +1,18 @@
 /* style for bookmark page */
-.bookmark-card-container{
-    display:flex;
-    flex-wrap: wrap;
-    /* gap:20px; */
-    /* width:100vw; */
+.bookmark-card-container {
+  display: flex;
+  flex-wrap: wrap;
+  /* gap:20px; */
+  /* width:100vw; */
 }
-.no-bookmark-message{
-    font-size:28px;
-    font-weight: bolder;
-    display:flex;
-    text-align: center;
-    color:rgb(251,213,3);
-    width:100vw;
-    height:calc(100vh - 80px);
-    justify-content: center;
-    align-items: center;
+.no-bookmark-message {
+  font-size: 28px;
+  font-weight: bolder;
+  display: flex;
+  text-align: center;
+  color: rgb(251, 213, 3);
+  width: 100vw;
+  height: calc(100vh - 80px);
+  justify-content: center;
+  align-items: center;
 }
