--- a/src/Component/PokemonList/pokemonList.css
+++ b/src/Component/PokemonList/pokemonList.css
@@ -64,21 +64,17 @@
   justify-content: space-between;
   align-items: center;
   padding: 10px 30px;
-  background: linear-gradient(
-    45deg,
-    rgb(48, 48, 48),
-    rgb(64, 64, 64)
-  ); /* Gradient background */
-  color: white; /* Text color */
+  background: linear-gradient(45deg, rgb(48, 48, 48), rgb(64, 64, 64));
+  color: white;
   border-bottom: 1px solid grey;
   height: 80px;
   position: sticky;
   top: 0;
   z-index: 10000;
-  font-family: "Comic Sans MS", cursive; /* Fun font family */
+  font-family: "Comic Sans MS", cursive;
 }
 button {
-  font-family: "Comic Sans MS", cursive; /* Fun font family */
+  font-family: "Comic Sans MS", cursive;
 }
 
 .left-header {
@@ -186,8 +182,12 @@ h1 {
   width: 240px;
   border-radius: 8px;
   border: 1px solid grey;
+  color:white;
   background-color: rgb(65 58 42);
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+.filter-data-sub input{
+  color:white;
 }
 
 .filter-input {
@@ -210,7 +210,7 @@ h1 {
 }
 
 .filter-data-sub:hover {
-  background-color: #e0e0e0;
+  /* background-color: #e0e0e0; */
   transition: background-color 0.3s ease;
 }
 
@@ -287,4 +287,25 @@ h1 {
 .pokemon-item a {
   color: #333;
   text-decoration: none;
+}
+
+/* loader */
+.loader {
+  border: 4px solid white;
+  border-top: 4px solid rgb(48, 124, 255);
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  animation: loader 2s linear infinite;
+  margin: 20px auto;
+  margin-top: 20%;
+}
+
+@keyframes loader {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
